# toykernel

./: .gitignore  .gitmessage  CMakeLists.txt  README.md  requirements.txt
benchmarks/: CMakeLists.txt
benchmarks/level1/: CMakeLists.txt
benchmarks/level2/: CMakeLists.txt
benchmarks/level3/: CMakeLists.txt
benchmarks/level4/: CMakeLists.txt
docs/: architecture.md  coding_style.md  debugging.md
include/: CMakeLists.txt
include/utils/: CMakeLists.txt
scripts/: benchmark.sh  build.sh  clean.sh  test.sh
src/: CMakeLists.txt
src/level1/: CMakeLists.txt  activation.cu  norm.cu  softmax.cu  vector_ops.cu
src/level1/activation/: CMakeLists.txt
src/level1/gemv/: CMakeLists.txt
src/level1/norm/: CMakeLists.txt
src/level1/softmax/: CMakeLists.txt
src/level1/vector_ops/: CMakeLists.txt
src/level2/: CMakeLists.txt  gemm.cu  gemv.cu  persistent.cu  sliced_k.cu  split_k.cu
src/level2/gemm/: CMakeLists.txt
src/level2/gemm/common/: CMakeLists.txt
src/level2/gemm/naive/: CMakeLists.txt
src/level2/gemm/persistent/: CMakeLists.txt
src/level2/gemm/sliced_k/: CMakeLists.txt
src/level2/gemm/split_k/: CMakeLists.txt
src/level3/: CMakeLists.txt  decoding.cu  flash_attention.cu  flash_attention_mma.cu  flash_attention_wmma.cu  flash_decoding.cu  paged_attention.cu  rope.cu  sparse_gemm.cu
src/level3/attention/: CMakeLists.txt
src/level3/decoding/: CMakeLists.txt
src/level3/memory/: CMakeLists.txt
src/level3/position/: CMakeLists.txt
src/level4/: CMakeLists.txt
src/level4/activation_quant/: CMakeLists.txt  awq.cu  smooth_quant.cu
tests/: CMakeLists.txt
tests/level1/: CMakeLists.txt
tests/level2/: CMakeLists.txt
tests/level3/: CMakeLists.txt
tests/level4/: CMakeLists.txt
(+7 files in other folders)
